--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@radix-ui/react-label": "2.1.1",
     "@radix-ui/react-slot": "1.1.1",
+    "@radix-ui/react-tooltip": "1.2.7",
+    "@radix-ui/react-popover": "1.1.14",
+    "@radix-ui/react-switch": "1.2.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
